Fix compilation condition for some ProRes dsp decoder functions.

Found, analysed and tested by trac user Jamal.

Fixes part of Ticket #1404.